fleet-yaml/ui/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: game-client
  name: game-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-client
  template:
    metadata:
      labels:
        app: game-client
    spec:
      containers:
      - name: game-client
        image: atgracey/game-ui-client-onsite:stable
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - mountPath: /usr/share/nginx/html/config.json
          name: config
          subPath: config-override.json
      volumes:
      - configMap:
          defaultMode: 420
          name: ui-config
        name: config
---
apiVersion: v1
kind: Service
metadata:
  name: game-client
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: game-client
