fleet-yaml/ui/testserver.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: game-testserver
  name: game-testserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: game-testserver
  template:
    metadata:
      labels:
        app: game-testserver
    spec:
      containers:
      - name: game-testserver
        image: atgracey/game-ui-testserver:latest
        ports:
        - containerPort: 8080
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: game-testserver
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: game-testserver
